tests/snapshots/integration__insta_create_index_large_table.snap
---
source: tests/integration.rs
expression: result
---
{
  "file": "test.sql",
  "findings": [
    {
      "rule_id": "create-index",
      "risk_level": "extreme",
      "confidence": {
        "from_docs": [
          "SHARE lock blocks writes for entire index build duration"
        ],
        "from_catalog": [
          "table size is 46.6 GB"
        ],
        "from_stats": [],
        "unknowns": [
          "query load unknown",
          "cache state unknown"
        ],
        "grade": "estimated"
      },
      "lock_mode": "SHARE",
      "rewrite": {
        "type": "none"
      },
      "affected_table": "orders",
      "summary": "CREATE INDEX \"idx_orders_customer\" on \"orders\" without CONCURRENTLY",
      "explanation": "Takes SHARE lock on \"orders\", blocking all INSERT, UPDATE, and DELETE for the entire duration of the index build. Table is 46.6 GB.",
      "recipe": {
        "title": "Non-blocking index build on \"orders\"",
        "steps": [
          {
            "phase": "expand",
            "description": "Create index concurrently (cannot run inside a transaction block)",
            "sql": "CREATE INDEX CONCURRENTLY \"idx_orders_customer\" ON \"orders\" (customer_id);",
            "separate_transaction": true
          }
        ]
      },
      "pg_version_note": null,
      "statement_sql": "CREATE INDEX idx_orders_customer ON orders (customer_id)",
      "duration_forecast": {
        "p50_seconds": 596.0464477539063,
        "p90_seconds": 1589.4571940104167,
        "worst_seconds": 4768.37158203125,
        "assumptions": [
          {
            "factor": "table size",
            "assumed": "46.6 GB",
            "source": "catalog"
          },
          {
            "factor": "cache state",
            "assumed": "warm shared_buffers at p50, cold at p90",
            "source": "assumed"
          },
          {
            "factor": "lock acquisition delay",
            "assumed": "no workload data, worst = 3x p90 heuristic",
            "source": "assumed"
          }
        ]
      }
    }
  ],
  "blast_radius": {
    "per_table": [
      {
        "table_name": "orders",
        "strongest_lock": "SHARE",
        "blocks_reads": false,
        "blocks_writes": true,
        "statement_count": 1,
        "table_size": null,
        "duration_forecast": {
          "p50_seconds": 596.0464477539063,
          "p90_seconds": 1589.4571940104167,
          "worst_seconds": 4768.37158203125,
          "assumptions": [
            {
              "factor": "table size",
              "assumed": "46.6 GB",
              "source": "catalog"
            },
            {
              "factor": "cache state",
              "assumed": "warm shared_buffers at p50, cold at p90",
              "source": "assumed"
            },
            {
              "factor": "lock acquisition delay",
              "assumed": "no workload data, worst = 3x p90 heuristic",
              "source": "assumed"
            }
          ]
        },
        "blocked_queries": [],
        "total_blocked_qps": 0.0,
        "confidence": {
          "from_docs": [
            "lock mode is SHARE for this operation"
          ],
          "from_catalog": [],
          "from_stats": [],
          "unknowns": [
            "query load unknown",
            "cache state unknown"
          ],
          "grade": "estimated"
        },
        "recommendation": null
      }
    ]
  },
  "overall_risk": "extreme",
  "overall_confidence": "estimated"
}
