tests/snapshots/integration__insta_set_not_null.snap
---
source: tests/integration.rs
expression: result
---
{
  "file": "test.sql",
  "findings": [
    {
      "rule_id": "set-not-null",
      "risk_level": "high",
      "confidence": {
        "from_docs": [
          "ACCESS EXCLUSIVE lock with full table scan for SET NOT NULL",
          "PostgreSQL 16 assumed"
        ],
        "from_catalog": [],
        "from_stats": [],
        "unknowns": [
          "table size unknown",
          "query load unknown",
          "cache state unknown"
        ],
        "grade": "static"
      },
      "lock_mode": "ACCESS_EXCLUSIVE",
      "rewrite": {
        "type": "none"
      },
      "affected_table": "users",
      "summary": "SET NOT NULL on \"users\".\"email\" requires full table scan",
      "explanation": "SET NOT NULL acquires ACCESS EXCLUSIVE lock and performs a full table scan to verify no NULLs exist. On PG 12+, the scan is skipped if a pre-validated CHECK (column IS NOT NULL) constraint already exists.",
      "recipe": {
        "title": "Safe SET NOT NULL for \"users\".\"email\"",
        "steps": [
          {
            "phase": "expand",
            "description": "Add CHECK constraint with NOT VALID (brief lock, no scan)",
            "sql": "ALTER TABLE \"users\" ADD CONSTRAINT \"users_email_not_null\" CHECK (\"email\" IS NOT NULL) NOT VALID;",
            "separate_transaction": false
          },
          {
            "phase": "validate",
            "description": "Validate constraint (SHARE UPDATE EXCLUSIVE, non-blocking)",
            "sql": "ALTER TABLE \"users\" VALIDATE CONSTRAINT \"users_email_not_null\";",
            "separate_transaction": true
          },
          {
            "phase": "switch",
            "description": "SET NOT NULL is now instant (PG 12+) as CHECK already proves it",
            "sql": "ALTER TABLE \"users\" ALTER COLUMN \"email\" SET NOT NULL;",
            "separate_transaction": true
          },
          {
            "phase": "contract",
            "description": "Drop the redundant CHECK constraint",
            "sql": "ALTER TABLE \"users\" DROP CONSTRAINT \"users_email_not_null\";",
            "separate_transaction": false
          }
        ]
      },
      "pg_version_note": "PG 12+ can skip the scan with a pre-validated CHECK constraint.",
      "statement_sql": "ALTER TABLE users ALTER COLUMN email SET NOT NULL",
      "duration_forecast": null
    }
  ],
  "blast_radius": {
    "per_table": [
      {
        "table_name": "users",
        "strongest_lock": "ACCESS_EXCLUSIVE",
        "blocks_reads": true,
        "blocks_writes": true,
        "statement_count": 1,
        "table_size": null,
        "duration_forecast": null,
        "blocked_queries": [],
        "total_blocked_qps": 0.0,
        "confidence": {
          "from_docs": [],
          "from_catalog": [],
          "from_stats": [],
          "unknowns": [
            "table size unknown",
            "query load unknown",
            "cache state unknown"
          ],
          "grade": "static"
        },
        "recommendation": null
      }
    ]
  },
  "overall_risk": "high",
  "overall_confidence": "static"
}
